[tool.poetry]
name = "coordinate-helper"
version = "0.1.0"
description = "Snippets to help with transformation between different astronomical coordinate systems."
authors = ["K-Monty <kmgoh1995@gmail.com>"]
license = "GNU v3"

[tool.poetry.dependencies]
python = ">=3.7"
astropy = "^4.3"
numpy = "^1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
